pod-security-standard/allwedcpability.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: allowedcapabilities
spec:
  module: registry://ghcr.io/kubewarden/policies/capabilities-psp:v0.1.15
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    allowed_capabilities:
    - something
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
      - kube-system
      - kube-public
      - kube-node-lease
    - key: platform.io/userspace
      operator: Equals
      value: "true"
