pod-security-standard/restrictsecompprofile.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: psp-seccomp-0c260
spec:
  module: registry://ghcr.io/kubewarden/policies/seccomp-psp:v0.1.4
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      resources:
        - pods
      operations:
        - CREATE
        - UPDATE
  mutating: false
  settings:
    allowed_profiles:
      - runtime/default
      - docker/default
    profile_types:
      - RuntimeDefault
    localhost_profiles: []
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
      - kube-system
      - kube-public
      - kube-node-lease
    - key: platform.io/userspace
      operator: Equals
      value: "true"
